Bug 345266 - articleformatter.cpp:52: bad call to ternary operator ?
Summary: articleformatter.cpp:52: bad call to ternary operator ?
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messagecore (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-17 15:55 UTC by dcb314
Modified: 2015-03-17 22:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2015-03-17 15:55:25 UTC
akregator/src/articleformatter.cpp:52]: (style) Same expression in both branches of ternary operator.

       const QString title = !enclosure.title().isEmpty() ? enclosure.url() : enclosure.url();


Reproducible: Always
Comment 1 Laurent Montel 2015-03-17 22:18:56 UTC
Git commit 57df75c17bceadd5cec3993f36b287016822bdac by Montel Laurent.
Committed on 17/03/2015 at 22:17.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 345266 - articleformatter.cpp:52: bad call to ternary operator ?

FIXED-IN: 4.14.7

M  +1    -1    akregator/src/articleformatter.cpp

http://commits.kde.org/kdepim/57df75c17bceadd5cec3993f36b287016822bdac