Fix Bug 345266 - articleformatter.cpp:52: bad call to ternary operator ?

FIXED-IN: 4.14.7
BUG: 345266